update post mr.brown and footer

--- a/_posts/2017-04-04-mr-brown.markdown
+++ b/_posts/2017-04-04-mr-brown.markdown
@@ -1,5 +1,6 @@
 ---
 title:  Mr.Brown
+desc: Бесплатная адаптивная тема для Jekyll. Подходит для информационных-новостных порталов.
 date: 2017-04-04 00:00:00
 thumbnail: mr-brown.jpg
 author: Artem Sheludko
